--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@lc-oc/modal-oc": "^0.1.0",
+    "@lc-oc/modal-validation-oc": "^0.1.0",
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.3",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.57.1",
+    "states-us": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
